force-app/main/default/objects/Weekly_Meal_Plan__c/Weekly_Meal_Plan__c.object-meta.xml
<CustomObject>
    <label>Weekly Meal Plan</label>
    <nameField>
        <displayFormat>Week-{0000}</displayFormat>
        <label>Week Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weekly Meal Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>