force-app/main/default/objects/Weekly_Meal_Plan__c/fields/Budget_Target__c.field-meta.xml
<CustomField>
    <fullName>Budget_Target__c</fullName>
    <label>Budget Target</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>