force-app/main/default/objects/Weekly_Meal_Plan__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>Last day of the meal plan (13 days after start date)</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>