force-app/main/default/objects/Weekly_Meal_Plan__c/fields/Generation_Method__c.field-meta.xml
<CustomField>
    <fullName>Generation_Method__c</fullName>
    <label>Generation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>AI Assisted</fullName>
            </value>
            <value>
                <fullName>Fully Automated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>