force-app/main/default/objects/Weekly_Meal_Plan__c/fields/Number_of_People__c.field-meta.xml
<CustomField>
    <fullName>Number_of_People__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Number of People</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>