force-app/main/default/objects/Weekly_Meal_Plan__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>First day of the meal plan (should be a Sunday)</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>