force-app/main/default/objects/Weekly_Meal_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Generation_Method__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Week_Start_Date__c</columns>
    <columns>Week_End_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>