force-app/main/default/objects/Weekly_Meal_Plan__c/listViews/Generated_Weekly_Meal_Plans.listView-meta.xml
<ListView>
    <fullName>Generated_Weekly_Meal_Plans</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Generation_Method__c</columns>
    <columns>Week_Start_Date__c</columns>
    <columns>Week_End_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>Generated Weekly Meal Plans</label>
</ListView>